# serializer version: 1
# name: TestUserRegistration.test_registration_success[confirm_email_page]
  '''
  <!DOCTYPE html>
  
  <html lang="en">
  <head>
      <meta charset="utf-8"/>
      <meta http-equiv="x-ua-compatible" content="ie=edge"/>
      <title>
          
              
      
      Confirm E-mail Address
  
  
              | Legadilo
          
      </title>
      <meta name="description"
            content="Read your RSS feeds & other saved articles!"/>
      
      <meta name="viewport" content="width=device-width, initial-scale=1"/>
      <link rel="manifest" href="/manifest.json"/>
      <meta name="theme-color" content="#0d6efd"/>
      <meta name="htmx-config"
            content='{"includeIndicatorStyles":false, "responseHandling": [{"code": "...", "swap": true}]}'/>
      <link rel="icon"
            type="image/png"
            href="/static/images/icons/legadilo.16x16.png"
            sizes="16x16"/>
      
          <link rel="stylesheet"
                type="text/css"
                href="/static/css/bootstrap.min.css"
                nonce="None"/>
          <link rel="stylesheet"
                type="text/css"
                href="/static/css/base.css"
                nonce="None"/>
          
          
      
      
      
          
              <script src="/static/popper.min.js"
                      nonce="None"
                      defer></script>
              <script src="/static/js/bootstrap.min.js"
                      nonce="None"
                      defer></script>
              <script src="/static/htmx.min.js" nonce="None" defer></script>
          
          <script src="/static/js/base.js" nonce="None" defer></script>
          <!-- This cannot be deferred: we want the proper theme to apply immediately, not after the page has loaded -->
          <script src="/static/js/theme_chooser.js"
                  nonce="None"></script>
          
          
      
  </head>
  <body class="content-body">
  <!-- Icons for theme selector -->
  <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
      <symbol id="check2" viewBox="0 0 16 16">
          <path
              d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z"/>
      </symbol>
      <symbol id="circle-half" viewBox="0 0 16 16">
          <path d="M8 15A7 7 0 1 0 8 1v14zm0 1A8 8 0 1 1 8 0a8 8 0 0 1 0 16z"/>
      </symbol>
      <symbol id="sun-fill" viewBox="0 0 16 16">
          <path
              d="M8 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z"/>
      </symbol>
      <symbol id="moon-stars-fill" viewBox="0 0 16 16">
          <path
              d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278z"/>
          <path
              d="M10.794 3.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387a1.734 1.734 0 0 0-1.097 1.097l-.387 1.162a.217.217 0 0 1-.412 0l-.387-1.162A1.734 1.734 0 0 0 9.31 6.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387a1.734 1.734 0 0 0 1.097-1.097l.387-1.162zM13.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732l-.774-.258a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L13.863.1z"/>
      </symbol>
  </svg>
  <!-- Ends icons for theme selector -->
  <div class="content-main-container">
      <dialog id="danger-modal" aria-labelledby="danger-modal-title">
          <div class="modal-header">
              <h1 id="danger-modal-title" class="modal-title fs-5"></h1>
              <button type="button"
                      class="btn-close"
                      id="danger-modal-close-btn"
                      aria-label="Close"></button>
          </div>
          <div class="modal-body"></div>
          <div class="modal-footer">
              <button type="button" class="btn btn-secondary" id="danger-modal-cancel-btn">No</button>
              <button type="button" class="btn btn-danger proceed">Yes</button>
          </div>
      </dialog>
      
          <div class="header-container mb-1 sticky-top">
              <nav class="navbar navbar-expand-md bd-navbar bg-body-tertiary">
                  <div class="container-fluid">
                      <button class="navbar-toggler navbar-toggler-right"
                              type="button"
                              data-bs-toggle="collapse"
                              data-bs-target="#navbarSupportedContent"
                              aria-controls="navbarSupportedContent"
                              aria-expanded="false"
                              aria-label="Toggle navigation">
                          <span class="navbar-toggler-icon"></span>
                      </button>
                      
                      
                      <span class="navbar-brand">Legadilo</span>
                      <div class="collapse navbar-collapse" id="navbarSupportedContent">
                          <ul class="navbar-nav me-auto">
                              
                          </ul>
                          <ul class="navbar-nav">
                              
                                  
  
  <!-- Taken and slightly adapted from the bootstrap website -->
  <li class="nav-item">
      <button id="bd-theme"
              class="btn btn-link nav-link py-2 px-0 px-lg-2 dropdown-toggle d-flex align-items-center"
              type="button"
              aria-expanded="false"
              data-bs-toggle="dropdown"
              data-bs-display="static"
              aria-label="Toggle theme (auto)">
          <svg class="bi my-1 theme-icon-active">
              <use href="#circle-half"></use>
          </svg>
          <span id="bd-theme-text" class="d-lg-none ms-2">Toggle theme</span>
      </button>
      <ul class="dropdown-menu dropdown-menu-end"
          aria-labelledby="bd-theme-text">
          <li>
              <button class="dropdown-item d-flex align-items-center"
                      type="button"
                      data-bs-theme-value="light"
                      aria-pressed="false">
                  <svg class="bi me-2 opacity-50">
                      <use href="#sun-fill"></use>
                  </svg>
                  Light
                  <svg class="bi ms-auto d-none">
                      <use href="#check2"></use>
                  </svg>
              </button>
              <button class="dropdown-item d-flex align-items-center"
                      type="button"
                      data-bs-theme-value="dark"
                      aria-pressed="false">
                  <svg class="bi me-2 opacity-50">
                      <use href="#moon-stars-fill"></use>
                  </svg>
                  Dark
                  <svg class="bi ms-auto d-none">
                      <use href="#check2"></use>
                  </svg>
              </button>
              <button class="dropdown-item d-flex align-items-center"
                      type="button"
                      data-bs-theme-value="auto"
                      aria-pressed="false">
                  <svg class="bi me-2 opacity-50" viewBox="0 0 16 16">
                      <use href="#circle-half"></use>
                  </svg>
                  Auto
                  <svg class="bi ms-auto d-none">
                      <use href="#check2"></use>
                  </svg>
              </button>
          </li>
      </ul>
  </li>
  
                                  
                                      <li class="nav-item">
                                          
                                          <a id="sign-up-link" class="nav-link"
                                             href="/~signup/">Sign Up</a>
                                      </li>
                                  
                                  <li class="nav-item">
                                      
                                      <a id="log-in-link" class="nav-link"
                                         href="/~login/">Sign In</a>
                                  </li>
                              
                          </ul>
                      </div>
                  </div>
              </nav>
          </div>
      
      <div class="container">
          
          
          
      <div class="row">
          
  
          <div class="col-md-9">
              
      <h1>Confirm E-mail Address</h1>
      
          
          <p>
              Please confirm that <a href="mailto:tester@legadilo.eu">tester@legadilo.eu</a> is an e-mail address for user tester@legadilo.eu.
          </p>
          <form method="post"
                action="/accounts/confirm-email/mockkey/">
              <input type="hidden" name="csrfmiddlewaretoken" value="mockedtokenyCeuigMCuiA">
              <button class="btn btn-primary" type="submit">Confirm</button>
          </form>
      
  
          </div>
      </div>
  
      </div>
  </div>
  <footer class="content-footer d-flex flex-column justify-content-center py-4 text-white">
      <p class="ps-4 pe-4 text-center">
          Legadilo <a class="text-reset" href="https://github.com/Jenselme/legadilo/blob/main/CHANGELOG.md">version 0.0.0</a>
      </p>
      <div class="d-flex flex-column flex-md-row justify-content-center align-items-center">
          <p class="ps-4 pe-4">
              <a class="text-reset" href="/">About</a>
          </p>
          <p class="ps-4 pe-4">
              <a class="text-reset" href="/privacy/">Privacy</a>
          </p>
          <p class="ps-4 pe-4">
              <a class="text-reset"
                 href="https://github.com/Jenselme/legadilo/issues">Report a bug</a>
          </p>
          <p class="ps-4 pe-4">
              
          </p>
      </div>
  </footer>
  </body>
  </html>
  '''
# ---
# name: TestUserRegistration.test_registration_success[login_failure_response]
  '''
  <!DOCTYPE html>
  
  <html lang="en">
  <head>
      <meta charset="utf-8"/>
      <meta http-equiv="x-ua-compatible" content="ie=edge"/>
      <title>
          
              
      
      Sign In
  
  
              | Legadilo
          
      </title>
      <meta name="description"
            content="Read your RSS feeds & other saved articles!"/>
      
      <meta name="viewport" content="width=device-width, initial-scale=1"/>
      <link rel="manifest" href="/manifest.json"/>
      <meta name="theme-color" content="#0d6efd"/>
      <meta name="htmx-config"
            content='{"includeIndicatorStyles":false, "responseHandling": [{"code": "...", "swap": true}]}'/>
      <link rel="icon"
            type="image/png"
            href="/static/images/icons/legadilo.16x16.png"
            sizes="16x16"/>
      
          <link rel="stylesheet"
                type="text/css"
                href="/static/css/bootstrap.min.css"
                nonce="None"/>
          <link rel="stylesheet"
                type="text/css"
                href="/static/css/base.css"
                nonce="None"/>
          
          
      
      
      
          
              <script src="/static/popper.min.js"
                      nonce="None"
                      defer></script>
              <script src="/static/js/bootstrap.min.js"
                      nonce="None"
                      defer></script>
              <script src="/static/htmx.min.js" nonce="None" defer></script>
          
          <script src="/static/js/base.js" nonce="None" defer></script>
          <!-- This cannot be deferred: we want the proper theme to apply immediately, not after the page has loaded -->
          <script src="/static/js/theme_chooser.js"
                  nonce="None"></script>
          
          
      
  </head>
  <body class="content-body">
  <!-- Icons for theme selector -->
  <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
      <symbol id="check2" viewBox="0 0 16 16">
          <path
              d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z"/>
      </symbol>
      <symbol id="circle-half" viewBox="0 0 16 16">
          <path d="M8 15A7 7 0 1 0 8 1v14zm0 1A8 8 0 1 1 8 0a8 8 0 0 1 0 16z"/>
      </symbol>
      <symbol id="sun-fill" viewBox="0 0 16 16">
          <path
              d="M8 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z"/>
      </symbol>
      <symbol id="moon-stars-fill" viewBox="0 0 16 16">
          <path
              d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278z"/>
          <path
              d="M10.794 3.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387a1.734 1.734 0 0 0-1.097 1.097l-.387 1.162a.217.217 0 0 1-.412 0l-.387-1.162A1.734 1.734 0 0 0 9.31 6.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387a1.734 1.734 0 0 0 1.097-1.097l.387-1.162zM13.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732l-.774-.258a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L13.863.1z"/>
      </symbol>
  </svg>
  <!-- Ends icons for theme selector -->
  <div class="content-main-container">
      <dialog id="danger-modal" aria-labelledby="danger-modal-title">
          <div class="modal-header">
              <h1 id="danger-modal-title" class="modal-title fs-5"></h1>
              <button type="button"
                      class="btn-close"
                      id="danger-modal-close-btn"
                      aria-label="Close"></button>
          </div>
          <div class="modal-body"></div>
          <div class="modal-footer">
              <button type="button" class="btn btn-secondary" id="danger-modal-cancel-btn">No</button>
              <button type="button" class="btn btn-danger proceed">Yes</button>
          </div>
      </dialog>
      
          <div class="header-container mb-1 sticky-top">
              <nav class="navbar navbar-expand-md bd-navbar bg-body-tertiary">
                  <div class="container-fluid">
                      <button class="navbar-toggler navbar-toggler-right"
                              type="button"
                              data-bs-toggle="collapse"
                              data-bs-target="#navbarSupportedContent"
                              aria-controls="navbarSupportedContent"
                              aria-expanded="false"
                              aria-label="Toggle navigation">
                          <span class="navbar-toggler-icon"></span>
                      </button>
                      
                      
                      <span class="navbar-brand">Legadilo</span>
                      <div class="collapse navbar-collapse" id="navbarSupportedContent">
                          <ul class="navbar-nav me-auto">
                              
                          </ul>
                          <ul class="navbar-nav">
                              
                                  
  
  <!-- Taken and slightly adapted from the bootstrap website -->
  <li class="nav-item">
      <button id="bd-theme"
              class="btn btn-link nav-link py-2 px-0 px-lg-2 dropdown-toggle d-flex align-items-center"
              type="button"
              aria-expanded="false"
              data-bs-toggle="dropdown"
              data-bs-display="static"
              aria-label="Toggle theme (auto)">
          <svg class="bi my-1 theme-icon-active">
              <use href="#circle-half"></use>
          </svg>
          <span id="bd-theme-text" class="d-lg-none ms-2">Toggle theme</span>
      </button>
      <ul class="dropdown-menu dropdown-menu-end"
          aria-labelledby="bd-theme-text">
          <li>
              <button class="dropdown-item d-flex align-items-center"
                      type="button"
                      data-bs-theme-value="light"
                      aria-pressed="false">
                  <svg class="bi me-2 opacity-50">
                      <use href="#sun-fill"></use>
                  </svg>
                  Light
                  <svg class="bi ms-auto d-none">
                      <use href="#check2"></use>
                  </svg>
              </button>
              <button class="dropdown-item d-flex align-items-center"
                      type="button"
                      data-bs-theme-value="dark"
                      aria-pressed="false">
                  <svg class="bi me-2 opacity-50">
                      <use href="#moon-stars-fill"></use>
                  </svg>
                  Dark
                  <svg class="bi ms-auto d-none">
                      <use href="#check2"></use>
                  </svg>
              </button>
              <button class="dropdown-item d-flex align-items-center"
                      type="button"
                      data-bs-theme-value="auto"
                      aria-pressed="false">
                  <svg class="bi me-2 opacity-50" viewBox="0 0 16 16">
                      <use href="#circle-half"></use>
                  </svg>
                  Auto
                  <svg class="bi ms-auto d-none">
                      <use href="#check2"></use>
                  </svg>
              </button>
          </li>
      </ul>
  </li>
  
                                  
                                      <li class="nav-item">
                                          
                                          <a id="sign-up-link" class="nav-link"
                                             href="/~signup/">Sign Up</a>
                                      </li>
                                  
                                  <li class="nav-item">
                                      
                                      <a id="log-in-link" class="nav-link"
                                         href="/~login/">Sign In</a>
                                  </li>
                              
                          </ul>
                      </div>
                  </div>
              </nav>
          </div>
      
      <div class="container">
          
              <div class="container-lg">
                  
                      <div
                          class="alert alert-dismissible alert-info">
                          Confirmation email sent to tester@legadilo.eu.
                          <button type="button"
                                  class="btn-close"
                                  data-bs-dismiss="alert"
                                  aria-label="Close"></button>
                      </div>
                  
              </div>
          
          
          
      <div class="row">
          
  
          <div class="col-md-9">
              
      <h1>Sign In</h1>
      
      
          
              <p>
                  If you have not created an account yet, then please <a href="/~signup/">sign up</a> first.
              </p>
          
      
      <form class="login" method="post" action="/~login/">
          <input type="hidden" name="csrfmiddlewaretoken" value="mockedtokenyCeuigMCuiA">
          
  
  <div id="div_id_login" class="mb-3"> <label
                  for="id_login" class="form-label requiredField">
                  Email<span class="asteriskField">*</span> </label> <input type="email" name="login" autocomplete="email" placeholder="Email address" maxlength="320" class="textinput form-control is-invalid" required aria-invalid="true" aria-describedby="id_login_error" id="id_login"> <div id="id_login_error" class="invalid-feedback"> <p id="error_1_id_login"><strong>This field is required.</strong></p> </div> </div> <div id="div_id_password" class="mb-3"> <label
                  for="id_password" class="form-label requiredField">
                  Password<span class="asteriskField">*</span> </label> <input type="password" name="password" placeholder="Password" autocomplete="current-password" class="passwordinput form-control" required aria-describedby="id_password_helptext" id="id_password"> <div id="id_password_helptext" class="form-text"><a href="/accounts/password/reset/">Forgot your password?</a></div> </div> <div class="mb-3"> <div id="div_id_remember" class="form-check"> <input type="checkbox" name="remember" class="checkboxinput form-check-input" id="id_remember"> <label for="id_remember" class="form-check-label">
                      Remember Me
                  </label> </div> </div>
  
          
          <a class="button secondaryAction"
             href="/accounts/password/reset/">Forgot Password?</a>
          <button class="primaryAction btn btn-primary" type="submit">Sign In</button>
      </form>
  
          </div>
      </div>
  
      </div>
  </div>
  <footer class="content-footer d-flex flex-column justify-content-center py-4 text-white">
      <p class="ps-4 pe-4 text-center">
          Legadilo <a class="text-reset" href="https://github.com/Jenselme/legadilo/blob/main/CHANGELOG.md">version 0.0.0</a>
      </p>
      <div class="d-flex flex-column flex-md-row justify-content-center align-items-center">
          <p class="ps-4 pe-4">
              <a class="text-reset" href="/">About</a>
          </p>
          <p class="ps-4 pe-4">
              <a class="text-reset" href="/privacy/">Privacy</a>
          </p>
          <p class="ps-4 pe-4">
              <a class="text-reset"
                 href="https://github.com/Jenselme/legadilo/issues">Report a bug</a>
          </p>
          <p class="ps-4 pe-4">
              
          </p>
      </div>
  </footer>
  </body>
  </html>
  '''
# ---
# name: TestUserRegistration.test_registration_success[login_page]
  '''
  <!DOCTYPE html>
  
  <html lang="en">
  <head>
      <meta charset="utf-8"/>
      <meta http-equiv="x-ua-compatible" content="ie=edge"/>
      <title>
          
              
      
      Sign In
  
  
              | Legadilo
          
      </title>
      <meta name="description"
            content="Read your RSS feeds & other saved articles!"/>
      
      <meta name="viewport" content="width=device-width, initial-scale=1"/>
      <link rel="manifest" href="/manifest.json"/>
      <meta name="theme-color" content="#0d6efd"/>
      <meta name="htmx-config"
            content='{"includeIndicatorStyles":false, "responseHandling": [{"code": "...", "swap": true}]}'/>
      <link rel="icon"
            type="image/png"
            href="/static/images/icons/legadilo.16x16.png"
            sizes="16x16"/>
      
          <link rel="stylesheet"
                type="text/css"
                href="/static/css/bootstrap.min.css"
                nonce="None"/>
          <link rel="stylesheet"
                type="text/css"
                href="/static/css/base.css"
                nonce="None"/>
          
          
      
      
      
          
              <script src="/static/popper.min.js"
                      nonce="None"
                      defer></script>
              <script src="/static/js/bootstrap.min.js"
                      nonce="None"
                      defer></script>
              <script src="/static/htmx.min.js" nonce="None" defer></script>
          
          <script src="/static/js/base.js" nonce="None" defer></script>
          <!-- This cannot be deferred: we want the proper theme to apply immediately, not after the page has loaded -->
          <script src="/static/js/theme_chooser.js"
                  nonce="None"></script>
          
          
      
  </head>
  <body class="content-body">
  <!-- Icons for theme selector -->
  <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
      <symbol id="check2" viewBox="0 0 16 16">
          <path
              d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z"/>
      </symbol>
      <symbol id="circle-half" viewBox="0 0 16 16">
          <path d="M8 15A7 7 0 1 0 8 1v14zm0 1A8 8 0 1 1 8 0a8 8 0 0 1 0 16z"/>
      </symbol>
      <symbol id="sun-fill" viewBox="0 0 16 16">
          <path
              d="M8 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z"/>
      </symbol>
      <symbol id="moon-stars-fill" viewBox="0 0 16 16">
          <path
              d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278z"/>
          <path
              d="M10.794 3.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387a1.734 1.734 0 0 0-1.097 1.097l-.387 1.162a.217.217 0 0 1-.412 0l-.387-1.162A1.734 1.734 0 0 0 9.31 6.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387a1.734 1.734 0 0 0 1.097-1.097l.387-1.162zM13.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732l-.774-.258a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L13.863.1z"/>
      </symbol>
  </svg>
  <!-- Ends icons for theme selector -->
  <div class="content-main-container">
      <dialog id="danger-modal" aria-labelledby="danger-modal-title">
          <div class="modal-header">
              <h1 id="danger-modal-title" class="modal-title fs-5"></h1>
              <button type="button"
                      class="btn-close"
                      id="danger-modal-close-btn"
                      aria-label="Close"></button>
          </div>
          <div class="modal-body"></div>
          <div class="modal-footer">
              <button type="button" class="btn btn-secondary" id="danger-modal-cancel-btn">No</button>
              <button type="button" class="btn btn-danger proceed">Yes</button>
          </div>
      </dialog>
      
          <div class="header-container mb-1 sticky-top">
              <nav class="navbar navbar-expand-md bd-navbar bg-body-tertiary">
                  <div class="container-fluid">
                      <button class="navbar-toggler navbar-toggler-right"
                              type="button"
                              data-bs-toggle="collapse"
                              data-bs-target="#navbarSupportedContent"
                              aria-controls="navbarSupportedContent"
                              aria-expanded="false"
                              aria-label="Toggle navigation">
                          <span class="navbar-toggler-icon"></span>
                      </button>
                      
                      
                      <span class="navbar-brand">Legadilo</span>
                      <div class="collapse navbar-collapse" id="navbarSupportedContent">
                          <ul class="navbar-nav me-auto">
                              
                          </ul>
                          <ul class="navbar-nav">
                              
                                  
  
  <!-- Taken and slightly adapted from the bootstrap website -->
  <li class="nav-item">
      <button id="bd-theme"
              class="btn btn-link nav-link py-2 px-0 px-lg-2 dropdown-toggle d-flex align-items-center"
              type="button"
              aria-expanded="false"
              data-bs-toggle="dropdown"
              data-bs-display="static"
              aria-label="Toggle theme (auto)">
          <svg class="bi my-1 theme-icon-active">
              <use href="#circle-half"></use>
          </svg>
          <span id="bd-theme-text" class="d-lg-none ms-2">Toggle theme</span>
      </button>
      <ul class="dropdown-menu dropdown-menu-end"
          aria-labelledby="bd-theme-text">
          <li>
              <button class="dropdown-item d-flex align-items-center"
                      type="button"
                      data-bs-theme-value="light"
                      aria-pressed="false">
                  <svg class="bi me-2 opacity-50">
                      <use href="#sun-fill"></use>
                  </svg>
                  Light
                  <svg class="bi ms-auto d-none">
                      <use href="#check2"></use>
                  </svg>
              </button>
              <button class="dropdown-item d-flex align-items-center"
                      type="button"
                      data-bs-theme-value="dark"
                      aria-pressed="false">
                  <svg class="bi me-2 opacity-50">
                      <use href="#moon-stars-fill"></use>
                  </svg>
                  Dark
                  <svg class="bi ms-auto d-none">
                      <use href="#check2"></use>
                  </svg>
              </button>
              <button class="dropdown-item d-flex align-items-center"
                      type="button"
                      data-bs-theme-value="auto"
                      aria-pressed="false">
                  <svg class="bi me-2 opacity-50" viewBox="0 0 16 16">
                      <use href="#circle-half"></use>
                  </svg>
                  Auto
                  <svg class="bi ms-auto d-none">
                      <use href="#check2"></use>
                  </svg>
              </button>
          </li>
      </ul>
  </li>
  
                                  
                                      <li class="nav-item">
                                          
                                          <a id="sign-up-link" class="nav-link"
                                             href="/~signup/">Sign Up</a>
                                      </li>
                                  
                                  <li class="nav-item">
                                      
                                      <a id="log-in-link" class="nav-link"
                                         href="/~login/">Sign In</a>
                                  </li>
                              
                          </ul>
                      </div>
                  </div>
              </nav>
          </div>
      
      <div class="container">
          
              <div class="container-lg">
                  
                      <div
                          class="alert alert-dismissible alert-success">
                          You have confirmed tester@legadilo.eu.
                          <button type="button"
                                  class="btn-close"
                                  data-bs-dismiss="alert"
                                  aria-label="Close"></button>
                      </div>
                  
              </div>
          
          
          
      <div class="row">
          
  
          <div class="col-md-9">
              
      <h1>Sign In</h1>
      
      
          
              <p>
                  If you have not created an account yet, then please <a href="/~signup/">sign up</a> first.
              </p>
          
      
      <form class="login" method="post" action="/~login/">
          <input type="hidden" name="csrfmiddlewaretoken" value="mockedtokenyCeuigMCuiA">
          
  
  <div id="div_id_login" class="mb-3"> <label
                  for="id_login" class="form-label requiredField">
                  Email<span class="asteriskField">*</span> </label> <input type="email" name="login" autocomplete="email" placeholder="Email address" maxlength="320" class="textinput form-control" required id="id_login"> </div> <div id="div_id_password" class="mb-3"> <label
                  for="id_password" class="form-label requiredField">
                  Password<span class="asteriskField">*</span> </label> <input type="password" name="password" placeholder="Password" autocomplete="current-password" class="passwordinput form-control" required aria-describedby="id_password_helptext" id="id_password"> <div id="id_password_helptext" class="form-text"><a href="/accounts/password/reset/">Forgot your password?</a></div> </div> <div class="mb-3"> <div id="div_id_remember" class="form-check"> <input type="checkbox" name="remember" class="checkboxinput form-check-input" id="id_remember"> <label for="id_remember" class="form-check-label">
                      Remember Me
                  </label> </div> </div>
  
          
          <a class="button secondaryAction"
             href="/accounts/password/reset/">Forgot Password?</a>
          <button class="primaryAction btn btn-primary" type="submit">Sign In</button>
      </form>
  
          </div>
      </div>
  
      </div>
  </div>
  <footer class="content-footer d-flex flex-column justify-content-center py-4 text-white">
      <p class="ps-4 pe-4 text-center">
          Legadilo <a class="text-reset" href="https://github.com/Jenselme/legadilo/blob/main/CHANGELOG.md">version 0.0.0</a>
      </p>
      <div class="d-flex flex-column flex-md-row justify-content-center align-items-center">
          <p class="ps-4 pe-4">
              <a class="text-reset" href="/">About</a>
          </p>
          <p class="ps-4 pe-4">
              <a class="text-reset" href="/privacy/">Privacy</a>
          </p>
          <p class="ps-4 pe-4">
              <a class="text-reset"
                 href="https://github.com/Jenselme/legadilo/issues">Report a bug</a>
          </p>
          <p class="ps-4 pe-4">
              
          </p>
      </div>
  </footer>
  </body>
  </html>
  '''
# ---
# name: TestUserRegistration.test_registration_success[page_response]
  '''
  <!DOCTYPE html>
  
  <html lang="en">
  <head>
      <meta charset="utf-8"/>
      <meta http-equiv="x-ua-compatible" content="ie=edge"/>
      <title>
          
              
      Unread
  
              | Legadilo
          
      </title>
      <meta name="description"
            content="Read your RSS feeds & other saved articles!"/>
      
      <meta name="viewport" content="width=device-width, initial-scale=1"/>
      <link rel="manifest" href="/manifest.json"/>
      <meta name="theme-color" content="#0d6efd"/>
      <meta name="htmx-config"
            content='{"includeIndicatorStyles":false, "responseHandling": [{"code": "...", "swap": true}]}'/>
      <link rel="icon"
            type="image/png"
            href="/static/images/icons/legadilo.16x16.png"
            sizes="16x16"/>
      
          <link rel="stylesheet"
                type="text/css"
                href="/static/css/bootstrap.min.css"
                nonce="None"/>
          <link rel="stylesheet"
                type="text/css"
                href="/static/css/base.css"
                nonce="None"/>
          
          
      
      
      
          
              <script src="/static/popper.min.js"
                      nonce="None"
                      defer></script>
              <script src="/static/js/bootstrap.min.js"
                      nonce="None"
                      defer></script>
              <script src="/static/htmx.min.js" nonce="None" defer></script>
          
          <script src="/static/js/base.js" nonce="None" defer></script>
          <!-- This cannot be deferred: we want the proper theme to apply immediately, not after the page has loaded -->
          <script src="/static/js/theme_chooser.js"
                  nonce="None"></script>
          
      <script src="/static/js/list_of_articles.js"
              nonce="None"
              defer></script>
      <script id="js-cfg" type="application/json">{"is_reading_on_scroll_enabled": false, "auto_refresh_interval": 1}</script>
      <script src="/static/js/tag_edition.js"
              nonce="None"
              type="module"></script>
  
      
  </head>
  <body class="content-body">
  <!-- Icons for theme selector -->
  <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
      <symbol id="check2" viewBox="0 0 16 16">
          <path
              d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z"/>
      </symbol>
      <symbol id="circle-half" viewBox="0 0 16 16">
          <path d="M8 15A7 7 0 1 0 8 1v14zm0 1A8 8 0 1 1 8 0a8 8 0 0 1 0 16z"/>
      </symbol>
      <symbol id="sun-fill" viewBox="0 0 16 16">
          <path
              d="M8 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z"/>
      </symbol>
      <symbol id="moon-stars-fill" viewBox="0 0 16 16">
          <path
              d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278z"/>
          <path
              d="M10.794 3.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387a1.734 1.734 0 0 0-1.097 1.097l-.387 1.162a.217.217 0 0 1-.412 0l-.387-1.162A1.734 1.734 0 0 0 9.31 6.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387a1.734 1.734 0 0 0 1.097-1.097l.387-1.162zM13.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732l-.774-.258a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L13.863.1z"/>
      </symbol>
  </svg>
  <!-- Ends icons for theme selector -->
  <div class="content-main-container">
      <dialog id="danger-modal" aria-labelledby="danger-modal-title">
          <div class="modal-header">
              <h1 id="danger-modal-title" class="modal-title fs-5"></h1>
              <button type="button"
                      class="btn-close"
                      id="danger-modal-close-btn"
                      aria-label="Close"></button>
          </div>
          <div class="modal-body"></div>
          <div class="modal-footer">
              <button type="button" class="btn btn-secondary" id="danger-modal-cancel-btn">No</button>
              <button type="button" class="btn btn-danger proceed">Yes</button>
          </div>
      </dialog>
      
          <div class="header-container mb-1 sticky-top">
              <nav class="navbar navbar-expand-md bd-navbar bg-body-tertiary">
                  <div class="container-fluid">
                      <button class="navbar-toggler navbar-toggler-right"
                              type="button"
                              data-bs-toggle="collapse"
                              data-bs-target="#navbarSupportedContent"
                              aria-controls="navbarSupportedContent"
                              aria-expanded="false"
                              aria-label="Toggle navigation">
                          <span class="navbar-toggler-icon"></span>
                      </button>
                      
      <div id="reading-list-dropdown-menu"
           class="col col-5 d-md-none dropdown d-flex justify-content-center">
          
              <button class="btn btn-secondary dropdown-toggle mw-100 d-flex align-items-center"
                      type="button"
                      data-bs-toggle="dropdown"
                      aria-expanded="false">
                  
                      <span
                          class="text-truncate d-inline-block">Unread</span>
                      
                  
              </button>
              <div class="p-0 dropdown-menu">
      <div class="list-group">
          
              <a href="/reading/lists/all-articles/"
                 class="list-group-item list-group-item-action d-flex justify-content-between "
                 
              >
                  <span>All articles</span>
                  
              </a>
          
              <a href="/reading/"
                 class="list-group-item list-group-item-action d-flex justify-content-between active"
                 aria-current="true"
              >
                  <span>Unread</span>
                  
              </a>
          
              <a href="/reading/lists/recent/"
                 class="list-group-item list-group-item-action d-flex justify-content-between "
                 
              >
                  <span>Recent</span>
                  
              </a>
          
              <a href="/reading/lists/favorite/"
                 class="list-group-item list-group-item-action d-flex justify-content-between "
                 
              >
                  <span>Favorite</span>
                  
              </a>
          
              <a href="/reading/lists/for-later/"
                 class="list-group-item list-group-item-action d-flex justify-content-between "
                 
              >
                  <span>For later</span>
                  
              </a>
          
      </div>
  </div>
          
      </div>
  
                      <span class="navbar-brand">Legadilo</span>
                      <div class="collapse navbar-collapse" id="navbarSupportedContent">
                          <ul class="navbar-nav me-auto">
                              
                                  <li class="nav-item">
                                      <a class="nav-link active"
                                         aria-current="page"
                                         href="/reading/">Default reading list</a>
                                  </li>
                                  <li class="nav-item">
                                      <a class="nav-link "
                                         
                                         href="/reading/articles-groups/">Articles groups</a>
                                  </li>
                              
                          </ul>
                          <ul class="navbar-nav">
                              
                                  <li class="nav-item">
                                      <form action="/reading/search/" method="get">
                                          <div class="input-group">
                                              <span id="articles-search-glass"
                                                    class="input-group-text">
  
  <svg class="bi" aria-hidden="true">
    <use href="/static/images/bs-sprite.svg#search"></use>
  </svg>
  </span>
                                              <input type="text"
                                                     class="form-control"
                                                     name="q"
                                                     placeholder="Search articles here..."
                                                     minlength="3"
                                                     aria-label="Search for articles"
                                                     aria-describedby="articles-search-glass"
                                                     required/>
                                          </div>
                                          <button class="visually-hidden"
                                                  type="submit">Search</button>
                                      </form>
                                  </li>
                                  <li class="nav-item">
                                      <a class="nav-link "
                                         
                                         href="/reading/articles/add/">
                                          
  
  <svg class="bi" aria-hidden="true">
    <use href="/static/images/bs-sprite.svg#file-earmark-plus"></use>
  </svg>
  
                                          Add an article
                                      </a>
                                  </li>
                                  <li class="nav-item">
                                      <a class="nav-link "
                                         
                                         href="/users/notifications/">
                                                  <span class="position-relative">
                                                      
                                                          
  
  <svg class="bi" aria-hidden="true">
    <use href="/static/images/bs-sprite.svg#bell"></use>
  </svg>
  
                                                      
                                                  </span>
                                      </a>
                                  </li>
                                  
  
  <!-- Taken and slightly adapted from the bootstrap website -->
  <li class="nav-item">
      <button id="bd-theme"
              class="btn btn-link nav-link py-2 px-0 px-lg-2 dropdown-toggle d-flex align-items-center"
              type="button"
              aria-expanded="false"
              data-bs-toggle="dropdown"
              data-bs-display="static"
              aria-label="Toggle theme (auto)">
          <svg class="bi my-1 theme-icon-active">
              <use href="#circle-half"></use>
          </svg>
          <span id="bd-theme-text" class="d-lg-none ms-2">Toggle theme</span>
      </button>
      <ul class="dropdown-menu dropdown-menu-end"
          aria-labelledby="bd-theme-text">
          <li>
              <button class="dropdown-item d-flex align-items-center"
                      type="button"
                      data-bs-theme-value="light"
                      aria-pressed="false">
                  <svg class="bi me-2 opacity-50">
                      <use href="#sun-fill"></use>
                  </svg>
                  Light
                  <svg class="bi ms-auto d-none">
                      <use href="#check2"></use>
                  </svg>
              </button>
              <button class="dropdown-item d-flex align-items-center"
                      type="button"
                      data-bs-theme-value="dark"
                      aria-pressed="false">
                  <svg class="bi me-2 opacity-50">
                      <use href="#moon-stars-fill"></use>
                  </svg>
                  Dark
                  <svg class="bi ms-auto d-none">
                      <use href="#check2"></use>
                  </svg>
              </button>
              <button class="dropdown-item d-flex align-items-center"
                      type="button"
                      data-bs-theme-value="auto"
                      aria-pressed="false">
                  <svg class="bi me-2 opacity-50" viewBox="0 0 16 16">
                      <use href="#circle-half"></use>
                  </svg>
                  Auto
                  <svg class="bi ms-auto d-none">
                      <use href="#check2"></use>
                  </svg>
              </button>
          </li>
      </ul>
  </li>
  
                                  <li class="nav-item dropdown">
                                      <a class="nav-link dropdown-toggle"
                                         href="#"
                                         role="button"
                                         data-bs-toggle="dropdown"
                                         data-bs-reference="parent"
                                         aria-expanded="false">
                                          
  
  <svg class="bi" aria-hidden="true">
    <use href="/static/images/bs-sprite.svg#person-circle"></use>
  </svg>
  
                                          <span
                                              class="visually-hidden">Profile menu</span>
                                      </a>
                                      <div class="dropdown-menu dropdown-menu-end">
                                          <a class="dropdown-item "
                                             
                                             href="/reading/tags/">Tags admin</a>
                                          <a class="dropdown-item  "
                                             
                                             href="/feeds/">Feeds admin</a>
                                          <a class="dropdown-item "
                                             
                                             href="/feeds/categories/">Feed categories admin</a>
                                          <a class="dropdown-item "
                                             
                                             href="/reading/lists/">Reading lists admin</a>
                                          <a class="dropdown-item "
                                             
                                             href="/users/~update/">User settings</a>
                                          
                                          
                                          <a class="dropdown-item"
                                             href="/~logout/">Sign Out</a>
                                      </div>
                                  </li>
                              
                          </ul>
                      </div>
                  </div>
              </nav>
          </div>
      
      <div class="container-fluid px-0">
          
              <div class="container-lg">
                  
                      <div
                          class="alert alert-dismissible alert-success">
                          Successfully signed in as tester@legadilo.eu.
                          <button type="button"
                                  class="btn-close"
                                  data-bs-dismiss="alert"
                                  aria-label="Close"></button>
                      </div>
                  
              </div>
          
          
          
      <div id="reading-list-title-container"
           class="container-fluid px-md-3 bg-body z-1">
          <div class="row">
              <div class="col col-md-3 d-none d-md-block"></div>
              <div class="col col-12 col-md-7 col-md-8 px-1 px-md-3">
                  <h1>Unread</h1>
              </div>
          </div>
      </div>
      <div class="container-fluid px-0">
          <div class="row scrollable px-0 mx-0">
              <div class="col col-md-1"></div>
              <div class="col col-2 d-none d-md-block">
                  <nav id="reading-list-group" class="sticky-md-top">
                      
      <div class="list-group">
          
              <a href="/reading/lists/all-articles/"
                 class="list-group-item list-group-item-action d-flex justify-content-between "
                 
              >
                  <span>All articles</span>
                  
              </a>
          
              <a href="/reading/"
                 class="list-group-item list-group-item-action d-flex justify-content-between active"
                 aria-current="true"
              >
                  <span>Unread</span>
                  
              </a>
          
              <a href="/reading/lists/recent/"
                 class="list-group-item list-group-item-action d-flex justify-content-between "
                 
              >
                  <span>Recent</span>
                  
              </a>
          
              <a href="/reading/lists/favorite/"
                 class="list-group-item list-group-item-action d-flex justify-content-between "
                 
              >
                  <span>Favorite</span>
                  
              </a>
          
              <a href="/reading/lists/for-later/"
                 class="list-group-item list-group-item-action d-flex justify-content-between "
                 
              >
                  <span>For later</span>
                  
              </a>
          
      </div>
  
                  </nav>
              </div>
              <div class="col col-12 col-md-8 px-1 px-md-3 mx-0">
                  <div id="reading-list-actions-container" class="row px-0 mx-0 bg-body z-1">
                      
                      
                      
                      
                          <div class="d-flex mb-2 col-md-2 px-0 mx-0">
                              <span class="align-middle d-flex align-items-center">
                                  <a href="/reading/search/?read_status=ONLY_UNREAD&amp;favorite_status=ALL&amp;for_later_status=ONLY_NOT_FOR_LATER&amp;articles_max_age_value=0&amp;articles_max_age_unit=UNSET&amp;articles_reading_time=0&amp;articles_reading_time_operator=UNSET&amp;include_tag_operator=ALL&amp;exclude_tag_operator=ALL">Go to advanced search</a>
                              </span>
                          </div>
                      
                      
                  </div>
                  
                      
                          <p>No articles to display.</p>
                      
                  
                  
              </div>
          </div>
      </div>
      <form id="bulk-mark-as-read-form"
            class="visually-hidden"
            aria-hidden="true"
            method="post"
            action="/reading/articles/mark-as-read-in-bulk/"
            hx-trigger="submit"
            hx-swap="none show:none"
            hx-boost="true"
            hx-push-url="false">
          <input type="hidden" name="csrfmiddlewaretoken" value="mockedtokenyCeuigMCuiA">
          <input id="bulk-mark-as-read-data" type="hidden" name="article_ids" value=""/>
          <input type="hidden"
                 name="displayed_reading_list_id"
                 value="2"/>
          <input type="hidden" name="from_url" value="/reading/"/>
      </form>
      <a class="btn btn-outline-primary sticky-bottom refresh-btn bg-secondary-subtle"
         aria-label="Refresh current reading list"
         role="button"
         href="/reading/">
  
  <svg class="bi" aria-hidden="true">
    <use href="/static/images/bs-sprite.svg#arrow-clockwise"></use>
  </svg>
  </a>
  
      </div>
  </div>
  <footer class="content-footer d-flex flex-column justify-content-center py-4 text-white">
      <p class="ps-4 pe-4 text-center">
          Legadilo <a class="text-reset" href="https://github.com/Jenselme/legadilo/blob/main/CHANGELOG.md">version 0.0.0</a>
      </p>
      <div class="d-flex flex-column flex-md-row justify-content-center align-items-center">
          <p class="ps-4 pe-4">
              <a class="text-reset" href="/">About</a>
          </p>
          <p class="ps-4 pe-4">
              <a class="text-reset" href="/privacy/">Privacy</a>
          </p>
          <p class="ps-4 pe-4">
              <a class="text-reset"
                 href="https://github.com/Jenselme/legadilo/issues">Report a bug</a>
          </p>
          <p class="ps-4 pe-4">
              
                  <span>
                              Contact us at <a class="text-reset" href="mailto:contact@legadilo.eu">contact@legadilo.eu</a>
                          </span>
              
          </p>
      </div>
  </footer>
  </body>
  </html>
  '''
# ---
# name: TestUserRegistration.test_registration_success[registration_email_body]
  '''
  Hello from Legadilo!
  
  You're receiving this email because user tester@legadilo.eu has given your email address to register an account on legadilo.eu.
  
  To confirm this is correct, go to http://testserver/accounts/confirm-email/mockkey/
  
  Thank you for using Legadilo!
  legadilo.eu
  '''
# ---
